# transfer-hook

./: Makefile  package.json
.github/workflows/: main.yml  publish-rust.yml
clients/cli/: Cargo.toml
clients/cli/src/: main.rs  meta.rs
interface/: Cargo.toml
interface/src/: error.rs  instruction.rs  onchain.rs
program/: Cargo.toml  README.md
program/src/: entrypoint.rs  lib.rs  processor.rs  state.rs
program/tests/: functional.rs
scripts/rust/: audit.mjs
