[package]
name = "spl-transfer-hook-example"
version = "0.6.0"
description = "Solana Program Library Transfer Hook Example Program"
documentation = "https://docs.rs/spl-transfer-hook-example"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[features]
default = ["forbid-additional-mints"]
no-entrypoint = []
forbid-additional-mints = []

[dependencies]
arrayref = "0.3.9"
solana-account-info = "3.0.0"
solana-cpi = "3.0.0"
solana-msg = "3.0.0"
solana-program-entrypoint = "3.0.0"
solana-program-error = "3.0.0"
solana-pubkey = "3.0.0"
solana-system-interface = { version = "2", features = ["bincode"] }
spl-tlv-account-resolution = "0.11.1"
spl-token-2022-interface = "2.0.0"
spl-transfer-hook-interface = { version = "2.0.0", path = "../interface" }
spl-type-length-value = "0.9.0"

[dev-dependencies]
solana-program-test = "3.0.0"
solana-sdk = "3.0.0"

[lib]
crate-type = ["cdylib", "lib"]

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
