[package]
name = "spl-transfer-hook-example"
version = "0.6.0"
description = "Solana Program Library Transfer Hook Example Program"
documentation = "https://docs.rs/spl-transfer-hook-example"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[features]
default = ["forbid-additional-mints"]
no-entrypoint = []
forbid-additional-mints = []

[dependencies]
arrayref = "0.3.9"
solana-account-info = "3.1.1"
solana-cpi = "3.0.0"
solana-msg = "3.1.0"
solana-program-entrypoint = "3.0.0"
solana-program-error = "3.0.1"
solana-pubkey = "4.1.0"
solana-system-interface = { version = "3", features = ["bincode"] }
spl-tlv-account-resolution = "0.11.0"
spl-token-2022-interface = "2.0.0"
spl-transfer-hook-interface = { version = "2.0.0", path = "../interface" }
spl-type-length-value = "0.9.1"

[dev-dependencies]
solana-program-test = { version = "3.1.0", features = ["agave-unstable-api"] }
solana-sdk = "3.0.0"

[lib]
crate-type = ["cdylib", "lib"]

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
