[package]
name = "spl-transfer-hook-cli"
version = "0.3.0"
description = "Solana Program Library Transfer Hook Command-line Utility"
documentation = "https://docs.rs/spl-transfer-hook-cli"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { version = "3", features = ["cargo"] }
futures-util = "0.3.31"
solana-clap-v3-utils = "3.0.0"
solana-cli-config = "3.0.0"
solana-client = "3.0.0"
solana-commitment-config = "3.0.0"
solana-instruction = "3.0.0"
solana-logger = "3.0.0"
solana-pubkey = "3.0.0"
solana-remote-wallet = "3.0.0"
solana-sdk-ids = "3.0.0"
solana-signature = "3.0.0"
solana-signer = "3.0.0"
solana-system-interface = "2"
solana-transaction = "3.0.0"
spl-tlv-account-resolution = { version = "0.11.1", features = ["serde-traits"] }
spl-transfer-hook-interface = { version = "2.0.0", path = "../../interface" }
strum = "0.27"
strum_macros = "0.27"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"

[dev-dependencies]
solana-account = "3.0.0"
solana-keypair = "3.0.0"
solana-program-option = "3.0.0"
solana-test-validator = "3.0.0"
spl-token-2022-interface = "2.0.0"
spl-token-client = "0.18.0"
spl-transfer-hook-example = { version = "0.6.0", path = "../../program" }

[lints]
workspace = true

[[bin]]
name = "spl-transfer-hook"
path = "src/main.rs"
